force-app/main/default/objects/vlocity_cmt__AttributeAssignmentRule__c/fields/vlocity_cmt__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AttributeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Attribute to be applied to the qualifying subjects.</description>
    <label>Vlocity Attribute</label>
    <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
    <relationshipLabel>Attribute Assignment Rules</relationshipLabel>
    <relationshipName>AttributeAssignmentRule</relationshipName>
    <type>Lookup</type>
</CustomField>