force-app/main/default/objects/vlocity_cmt__AttributeAssignmentRule__c/fields/vlocity_cmt__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Type__c</fullName>
    <description>The type of Attribute Assignment Rule. Supported Types are:
Field - Field Value will be applied as the Attribute&apos;s Value.
Formula - Result of the Formula will be applied as the Attributes Value. For On-Off Attributes, if formula resolves to &gt;= 1 or true then it will apply the Attribute. By Default all formulas have available all Fields on the SObject being evaluated. See below for further formula info.
Tracking Formula - Same as above except that Tracking Formula&apos;s will be run against all Tracking entries related to the SObject being evaluated.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Tracking Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>